Adjust spacing in footer Fix device compatibility map and protection type maps Fix indexing of formats and lookups in translation maps to handle spaces in external formats

--- a/vufind/web/interface/themes/marmot/css/styles.css
+++ b/vufind/web/interface/themes/marmot/css/styles.css
@@ -249,7 +249,7 @@ ul.menu li{
 #ft div.footerCol {
 	border-right: 1px dotted #cccccc;
 	margin-right:1em;
-	padding: 0 2em 1em 0;
+	padding: 0 1.5em 1em 0;
 	width:auto;
 	vertical-align:top;
 	display: inline-block;
